# OpencvSoLibrary4Android

./: README.md
opencv-so-jni/: settings.gradle
opencv-so-jni/app/: build.gradle
opencv-so-jni/app/src/androidTest/java/com/example/opencv_solibrary/: ExampleInstrumentedTest.java
opencv-so-jni/app/src/main/: AndroidManifest.xml
opencv-so-jni/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
opencv-so-jni/app/src/main/cpp/include/head/: native_head.h
opencv-so-jni/app/src/main/java/com/example/opencv_solibrary/: MainActivity.java
opencv-so-jni/app/src/main/res/values/: strings.xml
opencv-so-jni/app/src/test/java/com/example/opencv_solibrary/: ExampleUnitTest.java
opencv-so-jni/gradle/wrapper/: gradle-wrapper.properties
